# secure-gps

./: .gitignore  .gitmodules  Dockerfile  Health_circle_spoof.txt  Health_straight_spoof.txt  PlotTracks.py  README.md  Track_Sensor_CI_Circle.txt  Track_Sensor_CI_LaneChange.txt  Track_Sensor_CI_Straight.txt  Track_Sensor_KFNO_Circle.txt  Track_Sensor_KFNO_LaneChange.txt  Track_Sensor_KFNO_Straight.txt  Track_Sensor_KF_Circle.txt  Track_Sensor_KF_LaneChange.txt  Track_Sensor_KF_Straight.txt  Track_Sensor_SHARF_Circle.txt  Track_Sensor_SHARF_LaneChange.txt  Track_Sensor_SHARF_Straight.txt  Track_circle_spoof.txt  docker-compose.yml  ground_truth_data.txt  ground_truth_data_WHM_norm_R0.25.txt  ground_truth_data_WHM_spoof.txt  ground_truth_data_WHM_spoof_R0.25.txt  ground_truth_data_WHM_true.txt  ground_truth_data_WoHM_norm_R0.25.txt  ground_truth_data_WoHM_spoof_R0.25.txt  ground_truth_data_WoHM_true.txt  health.py  health_data.txt  health_data.xlsx  health_data_WHM_norm_R0.25.txt  health_data_WHM_spoof.txt  health_data_WHM_spoof_R0.25.txt  health_data_WHM_true.txt  health_data_WoHM_norm_R0.25.txt  health_data_WoHM_spoof_R0.25.txt  health_data_WoHM_true.txt  straight_spoof_detail.txt
Circle 2m/: Track_Sensor_CI_Circle.txt  Track_Sensor_KFNO_Circle.txt  Track_Sensor_KF_Circle.txt  Track_Sensor_SHARF_Circle.txt
Data/: SpoofDetailPlot.py  circle_spoof_detail.txt  lanechange_spoof_detail.txt  plotmean.py  straight_spoof_detail.txt
Data/KF/: Health_circle_spoof.txt  Health_lanechange_spoof.txt  Health_straight_spoof.txt  Track_circle_spoof.txt  Track_lanechange_spoof.txt  Track_straight_spoof.txt
Data/Ramp 0.01/: plotmean.py
Data/Ramp 0.025/: plotmean.py
Data/Ramp 0.05/: plotmean.py
Data/Ramp 0.05 between 5 and 15/: Health_circle_spoof_CI.txt  Health_circle_spoof_KF.txt  Health_circle_spoof_KFNO.txt  Health_circle_spoof_SHARF.txt  Health_lanechange_spoof.txt  Health_lanechange_spoof_CI.txt  Health_lanechange_spoof_KF.txt  Health_lanechange_spoof_KFNO.txt  Health_lanechange_spoof_SHARF.txt  Health_straight_spoof_CI.txt  Health_straight_spoof_KF.txt  Health_straight_spoof_KFNO.txt  Health_straight_spoof_SHARF.txt  Track_circle_spoof_CI.txt  Track_circle_spoof_KF.txt  Track_circle_spoof_KFNO.txt  Track_circle_spoof_SHARF.txt  Track_lanechange_spoof.txt  Track_lanechange_spoof_CI.txt  Track_lanechange_spoof_KF.txt  Track_lanechange_spoof_KFNO.txt  Track_lanechange_spoof_SHARF.txt  Track_straight_spoof_CI.txt  Track_straight_spoof_KF.txt  Track_straight_spoof_KFNO.txt  Track_straight_spoof_SHARF.txt
Data/Ramp 0.1/: plotmean.py
Data/SHARF/: .~lock.Track_circle_spoof.txt#  Health_circle_spoof.txt  Health_lanechange_spoof.txt  Health_straight_spoof.txt  Track_circle_spoof.txt  Track_lanechange_spoof.txt  Track_straight_spoof.txt
GPSSecure04272024/circle_left_turn_10mph_1/: metadata.yaml  metadata.yaml:Zone.Identifier
GPSSecure04272024/circle_right_turn_10mph_2/: metadata.yaml
GPSSecure04272024/circle_right_turn_10mph_3/: metadata.yaml
GPSSecure04272024/figure_eight_10mph_1/: metadata.yaml
GPSSecure04272024/figure_eight_10mph_2/: metadata.yaml
GPSSecure04272024/figure_eight_10mph_3/: metadata.yaml
GPSSecure04272024/lane_change_right_10mph_1/: metadata.yaml
GPSSecure04272024/lane_change_right_10mph_2/: metadata.yaml
dataspeed_dbw_simulation/: README.md
dataspeed_dbw_simulation/custom_dbw_sim_examples_ros2/: CMakeLists.txt  package.xml
dataspeed_dbw_simulation/custom_dbw_sim_examples_ros2/launch/: generic_dbw.launch.xml  joystick_demo_sim.launch.xml  lane_keep_demo.launch.xml  multi_car_sim.launch.xml
dataspeed_dbw_simulation/custom_dbw_sim_examples_ros2/rviz/: lane_detection.rviz  multi_car.rviz
dataspeed_dbw_simulation/custom_dbw_sim_examples_ros2/scripts/: multi_car_cmd.py
dataspeed_dbw_simulation/custom_dbw_sim_examples_ros2/urdf/: f150_model.urdf.xacro  fusion_model.urdf.xacro  jeep_model.urdf.xacro  mondeo_model.urdf.xacro  pacifica_model.urdf.xacro  vehicle_sensors.urdf.xacro
dataspeed_dbw_simulation/custom_dbw_sim_examples_ros2/worlds/: box_world.world
dataspeed_dbw_simulation/custom_dbw_sim_examples_ros2/yaml/: f150_joystick.yaml  f150_test_track.yaml  fusion_joystick.yaml  fusion_test_track.yaml  jeep_joystick.yaml  jeep_test_track.yaml  mkz_joystick.yaml  mkz_test_track.yaml  mondeo_joystick.yaml  mondeo_test_track.yaml  multi_car.yaml  pacifica_joystick.yaml  pacifica_test_track.yaml
dbw_gazebo_mkz/: CMakeLists.txt  package.xml
dbw_gazebo_mkz/launch/: Gazebo_mkz_initialize_launch.xml
dbw_gazebo_mkz/urdf/: mkz.urdf.xacro
dbw_gazebo_mkz/worlds/: controller_test_track_infrasim.world
dbw_gazebo_mkz/yaml/: single_vehicle_test_track.yaml
docker/: .bashrc  entrypoint.sh
src/vehicle_control_mkz/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/vehicle_control_mkz/config/: mkz.rviz
src/vehicle_control_mkz/launch/: control_mkz.launch.py  controllaunch.xml
src/vehicle_control_mkz/nodes/: ros_callback.py
src/vehicle_control_mkz/scripts/: RVIZ.py  Waypoint_plotter.py  collect_waypoints.py  follow_waypoints.py  gazebo_twister.py  lat_control.py  long_control.py  odompubtest_mkz.py  pid.py  ros_callback.py  steering_methods.py
src/vehicle_control_mkz/vehicle_control_mkz/algorithm/: pid.py  steering_methods.py
src/vehicle_control_mkz/vehicle_control_mkz/nodes/: gazebo_twister.py  lat_control.py  long_control.py  odom_pub.py  waypoint_recorder.py
src/vehicle_control_mkz/vehicle_control_mkz/utility/: low_pass_filter.py  shared_functions.py
src/vehicle_control_mkz/vehicle_control_mkz/vehicle_interface/: mkz_interface.py  vehicle_abstract.py
vehicle_control_mkz/: CMakeLists.txt  package.xml
vehicle_control_mkz/config/: MKZ.yaml
vehicle_control_mkz/launch/: Gazebo_controllaunch.xml  Real_controllaunch.xml  controllaunch.xml
vehicle_control_mkz/msg/: A9.msg
vehicle_control_mkz/scripts/: Waypoint_plotter.py  collect_waypoints.py  follow_waypoints.py  gazebo_twister.py  lat_control.py  long_control.py  low_pass_filter.py  odompubtest_mkz.py  odompubtest_realrunmkz.py  poop.py  ros_callback.py  steering_methods.py
(+209 files in other folders)
