<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dbw_gazebo_mkz</name>
  <version>20.4.5</version>
  <description>Attempt #2 ROS Sim</description>
  <maintainer email="agc4@todo.todo">agc4</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>custom_dbw_sim_examples</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>pcl_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>dataspeed_ulc_msgs</depend>
  
  
  <exec_depend>image_proc</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <exec_depend>dbw_ford_can</exec_depend>

  <export>
  
    <build_type>ament_cmake</build_type>
  </export>
</package>
