<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>custom_dbw_sim_examples</name>
  <version>3.0.0</version>
  <description>
    Examples of how to configure custom simulations using dataspeed_dbw_gazebo
  </description>

  <license>BSD</license>
  <author email="mradovnikovich@dataspeedinc.com">Micho Radovnikovich</author>
  <maintainer email="mradovnikovich@dataspeedinc.com">Micho Radovnikovich</maintainer>
  <url type="website">http://dataspeedinc.com</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>dbw_ford_can</exec_depend>
  <exec_depend>dbw_ford_joystick_demo</exec_depend>
  <exec_depend>dbw_fca_can</exec_depend>
  <exec_depend>dbw_fca_joystick_demo</exec_depend>
  <exec_depend>joy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
