<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vehicle_control_mkz</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="agc4@todo.todo">agc4</maintainer>
  <license>TODO: License declaration</license>
  
  <!-- Basic dependencies for python package-->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Added dependencies -->
  <build_depend>utm</build_depend>
  <build_depend>ros-humble-tf-transformations</build_depend>
  <build_depend>dbw_gazebo_mkz</build_depend>
  <build_depend>bluespace_ai_xsens_mti_driver</build_depend>

  <!-- For message building -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>




